--- a/Weekly Test - 5 CSS Properties/style.css
+++ b/Weekly Test - 5 CSS Properties/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;300;400;500;600;700&display=swap");
 
 * {
   margin: 0;
@@ -167,7 +168,7 @@ nav{
 /* Hero Section */
 .hero-section {
   height: 400px;
-  background-image: url("/hero-img.jpg");
+  background-image: url("./hero-img.jpg");
   background-position: center;
   background-size: cover;
 }
